2019-1/231/users/4205/executions/1581_2894.log
== TEST (2019-03-21 18:49:56) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
prc = float(input("Qual o valor unitario do jogo? "))
      

# Calculo do valor a ser pago, incluindo o frete:
total = 45 +8*prc

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:50:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
prc = float(input("Qual o valor unitario do jogo? "))
      

# Calculo do valor a ser pago, incluindo o frete:
total = 45 +8*80prc

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.163515
-- ERROR:
  File "/home/codebench/codes/1581/2894/main.py", line 9
    total = 45 +8*80prc
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:50:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
prc = float(input("Qual o valor unitario do jogo? "))
      

# Calculo do valor a ser pago, incluindo o frete:
total = 45 +8*prc

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:50:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
prc = float(input("Qual o valor unitario do jogo? "))
      

# Calculo do valor a ser pago, incluindo o frete:
total = 45 +8*prc

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.266284
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 15:50:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
prc = float(input("Qual o valor unitario do jogo? "))
      

# Calculo do valor a ser pago, incluindo o frete:
total = 45 +8*prc

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.146441
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:23:30) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
prc = float(input("Qual o valor unitario do jogo? "))
      

# Calculo do valor a ser pago, incluindo o frete:
total = 45 +8*prc

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:32:08) 
-- CODE:
var=float(input("qual o valor unitario do jogo"))
pcr=45+8*var
print(pcr)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
